syntax = "proto3";
package irishub.mint;

import "cosmos/base/query/v1beta1/pagination.proto";
import "irishub/mint/mint.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/irisnet/irishub/v2/modules/mint/types";

// Query creates service with guardian as rpc
service Query {
    // Params queries the mint parameters
    rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
        option (google.api.http).get = "/irishub/mint/params";
    }
}

// QueryParamsRequest is request type for the Query/Parameters RPC method
message QueryParamsRequest {
}

// QueryParamsResponse is response type for the Query/Parameters RPC method
message QueryParamsResponse {
    Params params = 1 [ (gogoproto.nullable) = false ];

    cosmos.base.query.v1beta1.PageResponse res = 2;
}